# colorless

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
clients/js/: README.md  adapters.js  core.js  index.d.ts  ledger.js  package.json  policy.js  redaction.js
clients/js/test/: adapters.test.js  guard.test.js  ledger.test.js  policy.test.js  redaction.test.js
colorless/: __init__.py  __main__.py  adapters.py  alerts.py  core.py  errors.py  guardrails.py  ledger.py  mcp_scan.py  otel.py  policy.py  redaction.py  store.py
colorless/dashboard/: __init__.py  approvals.py  server.py  ui.html
colorless/integrations/: __init__.py  _tools.py  crewai.py  langchain.py  llamaindex.py  mcp.py  openai_agents.py
docs/: DEMO.md  index.html
examples/: agent_loop.py  dashboard_demo.py  langchain_agent.py  mcp_server.py  quickstart.py
tests/: test_adapters.py  test_alerts.py  test_async.py  test_cli.py  test_dashboard.py  test_guard.py  test_guardrails.py  test_integrations.py  test_ledger.py  test_mcp_scan.py  test_otel.py  test_policy.py  test_redaction.py  test_store.py
warrant/: __init__.py  adapters.py  core.py  errors.py  ledger.py  policy.py
