[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "warrant-agents"
version = "0.1.0"
description = "Authorize, gate, and prove every action your AI agent takes — tamper-evident, zero-dependency."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Niki Petrov" }]
keywords = ["ai", "agents", "llm", "audit", "guardrails", "trust", "verification", "governance", "tamper-evident"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries",
]
dependencies = []  # zero dependencies, by design

[project.urls]
Homepage = "https://github.com/USERNAME/warrant"
Issues = "https://github.com/USERNAME/warrant/issues"

[tool.setuptools.packages.find]
include = ["warrant*"]
