[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name (the bare `colorless` is taken by an abandoned 0.0.1 placeholder).
# The import name is unchanged: `pip install colorless-audit` then `import colorless`.
name = "colorless-audit"
version = "1.0.1"
description = "Authorize, gate, and prove every action your AI agent takes — tamper-evident, zero-dependency."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Niki Petrov" }]
keywords = ["ai", "agents", "llm", "audit", "guardrails", "trust", "verification", "governance", "tamper-evident"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries",
]
dependencies = []  # zero dependencies, by design

[project.optional-dependencies]
otel = ["opentelemetry-api>=1.20"]   # only needed if you let colorless build the tracer for you

[project.scripts]
colorless = "colorless.__main__:main"

[project.urls]
Homepage = "https://github.com/nikip0/colorless"
Issues = "https://github.com/nikip0/colorless/issues"

[tool.setuptools.packages.find]
include = ["colorless*"]

[tool.setuptools.package-data]
"colorless.dashboard" = ["*.html"]
